Added cross-origin & changed haversine formula to miles